[IOTEND-21] Get attendance, get attendance per student and lesson, get attendance per teacher and lesson.
